tests/haste_name_reducers_defaults/haste_name_reducers_defaults.exp
Error ----------------------------------------------------------- Module1.js:5:2

Cannot cast `test` to boolean because `Test` is incompatible with boolean.

Error: Module1.js:5
  5: (test: boolean);
      ^^^^ Cannot cast `test` to boolean because `Test` [1] is incompatible with boolean [2].
  References:
    4: module.exports = new Test();
                        ^^^^^^^^^^ [1]: `Test`. See: node_modules/test/Module1.js:4
    5: (test: boolean);
              ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------- index.js:3:2

Cannot cast `require(...)` to boolean because `Test` is incompatible with
boolean.

Error: index.js:3
  3: (require('Module1'): boolean);
      ^^^^^^^^^^^^^^^^^^ Cannot cast `require(...)` to boolean because `Test` [1] is incompatible with boolean [2].
  References:
    4: module.exports = new Test();
                        ^^^^^^^^^^ [1]: `Test`. See: node_modules/test/Module1.js:4
    3: (require('Module1'): boolean);
                            ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------- index.js:4:2

Cannot cast `require(...).foo()` to boolean because `Test2` is incompatible with
boolean.

Error: index.js:4
  4: (require('Module2').foo(): boolean);
      ^^^^^^^^^^^^^^^^^^^^^^^^ Cannot cast `require(...).foo()` to boolean because `Test2` [1] is incompatible with boolean [2].
  References:
    2: declare export function foo(): Test2;
                                      ^^^^^ [1]: `Test2`. See: foo/Module2.js.flow:2
    4: (require('Module2').foo(): boolean);
                                  ^^^^^^^ [2]: boolean

Error ------------------------------------------------------------- index.js:5:9

Cannot resolve module `Module3`.

Error: index.js:5
  5: require('Module3');
             ^^^^^^^^^ Cannot resolve module `Module3`.


Found 4 errors
